tests/spec/non_conformant/errors/invalid_operation/plus.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/invalid-operation/plus.hrx"

// Ignoring "test", error tests are not supported yet.
